--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '0.2.0' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,36 +9,39 @@ package:
 source:
   fn: skellam_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/skellam_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/skellam/skellam_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/skellam_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/skellam/skellam_{{ version }}.tar.gz
   sha256: fd016494436ff6e877909e390440e595a5dc2def8ab42eb79883f5038b5ebc64
 
 build:
-  number: 0
+  merge_build_host: True  # [win]
+  number: 1
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('skellam')"  # [not win]
+    - $R -e "library('skellam')"           # [not win]
     - "\"%R%\" -e \"library('skellam')\""  # [win]
 
 about:
   home: http://r-forge.r-project.org/projects/healthqueues/
   license: GPL (>= 2)
-  summary: |
-    Functions for the Skellam distribution, including: density (pmf), cdf, quantiles
-    and regression.
+  summary: 'Functions for the Skellam distribution, including: density (pmf), cdf, quantiles
+    and regression.'
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
@@ -47,3 +49,5 @@ extra:
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
