--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,16 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: skellam_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/skellam_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/skellam/skellam_{{ version }}.tar.gz
   sha256: fd016494436ff6e877909e390440e595a5dc2def8ab42eb79883f5038b5ebc64
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
   number: 1004
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -24,6 +23,7 @@ build:
 requirements:
   build:
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
   run:
@@ -36,11 +36,12 @@ test:
 
 about:
   home: http://r-forge.r-project.org/projects/healthqueues/
-  license: GPL (>= 2)
+  license: GPL-2.0-or-later
   summary: 'Functions for the Skellam distribution, including: density (pmf), cdf, quantiles
     and regression.'
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
